# mysqlversion_library_managment

./: .gitignore  .lock-waf_win32_build  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Functionatlity.h  MySQLLibrary.vcxproj  MySQLLibrary.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  build.ps1  build_debug.ps1  checkmemory.h  cmake_install.cmake  library_table.sql  mysql_connect.cpp  mysql_connect.h  mysqlversion_vs.cpp  mysqlversion_vs.vcxproj  mysqlversion_vs.vcxproj.filters  waf  waf_script.sh  waf_script_debug.sh  wscript
build_output/: .lock-waf_win32_build  .wafpickle-win32-50989552-20  .wafpickle-win32-51053040-20
build_output/c4che/: _cache.py  build.config.py
sln_solutions/: ALL_BUILD.vcxproj  MySQLLibrary.sln  MySQLLibrary.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  mysqlversion_vs.sln  mysqlversion_vs.vcxproj  mysqlversion_vs.vcxproj.filters
src/: CMakeCache.txt  library_table.sql  mysql_connect.h  mysqlversion_vs.cpp
